traversal.snake.Snake.scala.error
Compilation error:
Snake:9: error: illegal start of simple expression
    if (verifFin()):
                   ^